--- a/public/player.css
+++ b/public/player.css
@@ -1,2 +1,3 @@
-body { background: grey; padding: 0; height: 100%; }
-#status { position: fixed; bottom: 0; margin: 0; padding: 0.5em; color: white; }
+body { background: grey; margin: 0; padding: 0; height: 100%; }
+#status { position: fixed; bottom: 0; margin: 0 1em; padding: 0.5em; color: white; }
+#cover { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; }
