--- a/public/player.css
+++ b/public/player.css
@@ -1,4 +1,4 @@
-body { background: grey; margin: 0; padding: 0; height: 100%; }
+body { background: rgba(100,100,255,0.8); margin: 0; padding: 0; height: 100%; }
 footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0.8); height: 2em; }
 #status { margin: 0 1em; padding: 0.5em 0.5em 1em; color: white; }
 #cover { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; }
