--- a/public/player.css
+++ b/public/player.css
@@ -1,6 +1,11 @@
 body { background: rgba(100,100,255,0.8); margin: 0; padding: 0; height: 100%; }
 footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0.8); height: 2em; }
-#status { margin: 0 1em; padding: 0.5em 0.5em 1em; color: white; }
+#status { 
+	margin: 0 1em;
+	padding: 0.5em 0.5em 1em;
+	color: white; 
+	font-family: Geneva, Arial, sans-serif;
+}
 #cover { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; }
 #next { 
 	position: fixed;
@@ -8,4 +13,19 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	padding: 0.5em;
+	font-family: Georgia, serif;
+}
+#nowtitle, #nowartist {
+	display: block;
+    font-weight: bold;
+    text-shadow: white 0 0 10px;
+    margin: 0 10px;
+	font-family: Papyrus, Georgia, serif;
+}
+#nowtitle {
+    font-size: 2em;
+    margin-top: 10px;
+}
+#nowartist {
+	font-style: italic;
 }
