--- a/public/player.css
+++ b/public/player.css
@@ -1,11 +1,5 @@
 body { background: rgba(100,100,255,0.8); margin: 0; padding: 0; height: 100%; }
 footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0.8); height: 2em; }
-#status { 
-	margin: 0 1em;
-	padding: 0.5em 0.5em 1em;
-	color: white; 
-	font-family: Geneva, Arial, sans-serif;
-}
 #cover { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; }
 #next { 
 	position: fixed;
@@ -65,16 +59,25 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 	z-index: 10;
 	cursor: pointer;
 }
+.state {
+	text-align: center;
+	color: white; 
+	font-family: Geneva, Arial, sans-serif;
+	text-transform: capitalize;
+	margin: 0 1em;
+	background: grey;
+}
+#status { 
+	padding: 0.5em 0.5em 1em;
+}
 #playlist .state {
 	width: 90px;
 	display: inline-block;
 	font-size: 0.7em;
 	color: white;
 	text-transform: capitalize;
-	margin: 0 1em;
-	text-align: center;
 }
-.state[data-state='fetching'], .state[data-state='buffering'], .state[data-state='decoding'], .state[data-state='preparing'] {
+.state[data-state$='ing'] {
 	background: chocolate;
 }
 .state[data-state='unloaded'] {
@@ -83,6 +86,9 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 .state[data-state='failed'] {
 	background: red;
 }
-.state[data-state='ready'] {
+.state[data-state='paused'], .state[data-state='ready'] {
+	background: indigo;
+}
+.state[data-state='playing'] {
 	background: green;
 }
