--- a/public/player.css
+++ b/public/player.css
@@ -1,5 +1,5 @@
-body { background: rgba(100,100,255,0.8); margin: 0; padding: 0; height: 100%; }
-footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0.8); height: 2em; }
+body { background-color: rgba(100,100,255,0.8); margin: 0; padding: 0; height: 100%; }
+footer { position: fixed; bottom: 0; width: 100%; background-color: rgba(100,100,255,0.8); height: 2em; }
 #cover { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; }
 #next { 
 	position: fixed;
@@ -33,7 +33,7 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 	left: 1em;
 	right: 1em;
 	bottom: 3em;
-	background: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.8);
 	border-radius: 2em;
 	border-style: solid;
 	overflow: scroll;
@@ -65,7 +65,7 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 	font-family: Geneva, Arial, sans-serif;
 	text-transform: capitalize;
 	margin: 0 1em;
-	background: grey;
+	background-color: grey;
 }
 #status { 
 	padding: 0.5em 0.5em 1em;
@@ -78,17 +78,20 @@ footer { position: fixed; bottom: 0; width: 100%; background: rgba(100,100,255,0
 	text-transform: capitalize;
 }
 .state[data-state$='ing'] {
-	background: chocolate;
+	background-color: chocolate;
 }
 .state[data-state='unloaded'] {
-	background: grey;
+	background-color: grey;
 }
 .state[data-state='failed'] {
-	background: red;
+	background-color: red;
 }
 .state[data-state='paused'], .state[data-state='ready'] {
-	background: indigo;
+	background-color: indigo;
 }
 .state[data-state='playing'] {
-	background: green;
+	background-color: green;
+}
+.state[data-state='downloaded'] {
+	background-color: dodgerblue;
 }
