pass server variables through to the client

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -8,6 +8,9 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
 	<link href="/v3.css" rel="stylesheet">
 	<link rel="icon" type="image/jpg" href="/logo.jpg" />
+	<script type="text/javascript">
+		const clientVariables = {{{clientVariables}}};
+	</script>
 </head> 
 <body>
 	<div id="nonjs">
