--- a/views/index.mustache
+++ b/views/index.mustache
@@ -7,6 +7,7 @@
 	<title>LucOs Media Player</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
 	<link href="/v3.css" rel="stylesheet">
+	<link href="/navbar.css" rel="stylesheet">
 	<link rel="icon" type="image/jpg" href="/logo.jpg" />
 	<script type="text/javascript">
 		const clientVariables = {{{clientVariables}}};
