poll media manager and keep 'now' fields up-to-date

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -16,11 +16,11 @@
 <body>
 	<div id="nonjs">
 		<h2>Current Track</h2>
-		<div class="now">
+		<div id="now">
 			<div class="info">
-				<div class="title">{{now.title}}</div>
-				<div class="artist ">{{now.artist}}</div>
-				<img class="img" src="{{now.thumb}}" alt="" />
+				<div id="now_title">{{now.title}}</div>
+				<div id="now_artist">{{now.artist}}</div>
+				<img id="now_thumb" src="{{now.thumb}}" alt="" />
 			</div>
 		</div>
 		<h2>Controls</h2>
