--- a/public/v3.css
+++ b/public/v3.css
@@ -1,13 +1,13 @@
 html { padding-top:0!important; -webkit-overflow-scrolling: auto; }
 body { background: #000; color: #fff; font-size: 16px; left: 0; right: 0; top: 0; bottom: 0; position: absolute; padding: 0; margin: 0; }
-.now { text-align: center; background:#000; border-bottom: solid #502; color: white; overflow: hidden; padding: 1em; }
-.now .img { height: 100px; margin: 1em auto; }
-.now > .info > * { display: block; font-weight: bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-.now .links { margin: 1em auto; }
-.now .links li { list-style-type: none; line-height: 3em;  color: #55f; font-weight: bold; }
-.now .links li a { color: inherit; }
-.now .links li .loading { color: #fa0; }
-.now .links li .exticon { margin: 0 0.5em; }
+#now { text-align: center; background:#000; border-bottom: solid #502; color: white; overflow: hidden; padding: 1em; }
+#now_thumb { height: 100px; margin: 1em auto; }
+#now > .info > * { display: block; font-weight: bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+#now .links { margin: 1em auto; }
+#now .links li { list-style-type: none; line-height: 3em;  color: #55f; font-weight: bold; }
+#now .links li a { color: inherit; }
+#now .links li .loading { color: #fa0; }
+#now .links li .exticon { margin: 0 0.5em; }
 h2 { display: none; }
 #controls > *, .links li { cursor: pointer; }
 .links li a:hover { text-decoration: underline; }
@@ -71,30 +71,30 @@ body.cast-receiver.lucos_gotnavbar cast-media-player {
 }
 
 @media (min-width: 20cm) {
-	/*.now .img { -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.5)), color-stop(0.7, transparent)); }*/
-	.now .img { -webkit-box-reflect: below url(https://ceol.l42.eu/thumb.png); }
+	/*#now_thumb { -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.5)), color-stop(0.7, transparent)); }*/
+	#now_thumb { -webkit-box-reflect: below url(https://ceol.l42.eu/thumb.png); }
 	body { padding: 1em 1em 0 1em; }
 	.next .title { display: none }
-	.now .links li { line-height: 2em; float: right; margin-right: 60px;}
+	#now .links li { line-height: 2em; float: right; margin-right: 60px;}
 	.status { display: none; }
 	#nonjs #controls li { display: inline; }
-	.now .links li .ext { display: none; }
+	#now .links li .ext { display: none; }
 }
 @media (max-width: 20cm) {
 	#controls { display: none; }
 	#nonjs #controls { display:block; height: auto; list-style-type: none; padding: 0; }
 	#nonjs #controls input { width: 90%; margin: 0.5em 5%; }
-	.now .links li .link { display: none; }
-	.now .links li .exticon { display: none; }
+	#now .links li .link { display: none; }
+	#now .links li .exticon { display: none; }
 	
 	/* Hide the first playlist item as that's shown in .next */
 	.playlist li:first-child { display: none; }
 }
 @media (max-width: 20cm) and (min-width: 399px) {
-	.now > .info { float: right; width: 240px; margin-right: 60px; }
-	.now { padding: 1em 0 0 0; }
-	.now > .links { padding: 0; max-width: 110px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-	.now > .links li { display: block; }
+	#now > .info { float: right; width: 240px; margin-right: 60px; }
+	#now { padding: 1em 0 0 0; }
+	#now > .links { padding: 0; max-width: 110px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+	#now > .links li { display: block; }
 }
 @media (max-height: 10cm) {
 	.playlist { display: none; }
