use editurls in v3

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -47,6 +47,11 @@
 			</form>
 		</li>
 		<li>
+			<form method="get" action="{{now.editurl}}" id='edit' target='_blank'>
+				<input type='submit' value="Edit Track Metadata" id='edit-submit'/>
+			</form>
+		</li>
+		<li>
 			<form method="get" action="/v3" id='refresh'>
 				<input type='hidden'/>
 				<input type='submit' value="Refresh" id='refresh-submit'/>
