basic volume buttons

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -47,6 +47,18 @@
 			</form>
 		</li>
 		<li>
+			<form method="post" action="/v3/volume?volume={{volumeUp}}" id='volume-up'>
+				<input type='hidden'/>
+				<input type='submit' value="Increase Volume" id='volume-up-submit'/>
+			</form>
+		</li>
+		<li>
+			<form method="post" action="/v3/volume?volume={{volumeDown}}" id='volume-down'>
+				<input type='hidden'/>
+				<input type='submit' value="Decrease Volume" id='volume-down-submit'/>
+			</form>
+		</li>
+		<li>
 			<form method="get" action="{{now.editurl}}" id='edit' target='_blank'>
 				<input type='submit' value="Edit Track Metadata" id='edit-submit'/>
 			</form>
