--- a/views/index.mustache
+++ b/views/index.mustache
@@ -17,9 +17,9 @@
 	<h2>Current Track</h2>
 	<div id="now">
 		<div class="info">
-			<div id="now_title">{{now.title}}</div>
-			<div id="now_artist">{{now.artist}}</div>
-			<img id="now_thumb" src="{{now.thumb}}" alt="" />
+			<div id="now_title">{{now.metadata.title}}</div>
+			<div id="now_artist">{{now.metadata.artist}}</div>
+			<img id="now_thumb" src="{{now.metadata.thumb}}" alt="" />
 		</div>
 	</div>
 	<h2>Controls</h2>
@@ -71,7 +71,12 @@
 			</form>
 		</li>
 	</ul>
-
+	<h2>Playlist</h2>
+	<ol id="playlist" start="2">
+	{{#playlist}}
+		<li><span>{{metadata.title}}</span></li>
+	{{/playlist}}
+	</ol>
 	<script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 	<script type="text/javascript"
 	src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
