move playist render logic into its own component

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -72,7 +72,7 @@
 		</li>
 	</ul>
 	<h2>Playlist</h2>
-	<ol id="playlist" start="2">
+	<ol is="track-playlist" start="2">
 	{{#playlist}}
 		<li><span>{{metadata.title}}</span></li>
 	{{/playlist}}
