--- a/views/index.mustache
+++ b/views/index.mustache
@@ -15,13 +15,13 @@
 <body>
 	<lucos-navbar>Media Player</lucos-navbar>
 	<h2>Current Track</h2>
-	<div id="now">
+	<now-playing>
 		<div class="info">
 			<div id="now_title"> {{now.metadata.title}}</div>
 			<div id="now_artist"> {{now.metadata.artist}}</div>
 			<img id="now_thumb" src="{{now.metadata.thumb}}" alt="" />
 		</div>
-	</div>
+	</now-playing>
 	<h2>Controls</h2>
 	<ul id='controls'>
 		{{#isPlaying}}
