move edit form logic into web component

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -58,7 +58,7 @@
 			</volume-control>
 		</li>
 		<li>
-			<form method="get" action="{{now.editurl}}" id='edit' target='_blank'>
+			<form method="get" action="{{now.editurl}}" id='edit' target='_blank' is="edit-form">
 				<input type='submit' value="Edit Track Metadata" id='edit-submit'/>
 			</form>
 		</li>
