--- a/views/index.mustache
+++ b/views/index.mustache
@@ -22,22 +22,18 @@
 	</now-playing>
 	<h2>Controls</h2>
 	<ul id='controls'>
-		{{#isPlaying}}
 		<li>
-			<form method="post" action="/v3/pause" id='playpause'>
+			<form
+				method="post"
+				action="/v3/{{#isPlaying}}pause{{/isPlaying}}{{^isPlaying}}play{{/isPlaying}}"
+				id='playpause'
+				is="playpause-form">
 				<input type='hidden'/>
-				<input type='submit' value="Pause" id='playpause-submit'/>
+				<input
+					type='submit'
+					value="{{#isPlaying}}Pause{{/isPlaying}}{{^isPlaying}}Play{{/isPlaying}}"/>
 			</form>
 		</li>
-		{{/isPlaying}}
-		{{^isPlaying}}
-		<li>
-			<form method="post" action="/v3/play" id='playpause'>
-				<input type='hidden'/>
-				<input type='submit' value="Play" id='playpause-submit'/>
-			</form>
-		</li>
-		{{/isPlaying}}
 		<li>
 			<form method="post" action="/v3/next" id='next'>
 				<input type='hidden'/>
