--- a/views/index.mustache
+++ b/views/index.mustache
@@ -54,7 +54,7 @@
 			</volume-control>
 		</li>
 		<li>
-			<form method="get" action="{{now.editurl}}" id='edit' target='_blank' is="edit-form">
+			<form method="get" action="{{now.metadata.editurl}}" id='edit' target='_blank' is="edit-form">
 				<input type='submit' value="Edit Track Metadata" id='edit-submit'/>
 			</form>
 		</li>
