move next button logic into web component

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -35,7 +35,7 @@
 			</form>
 		</li>
 		<li>
-			<form method="post" action="/v3/next" id='next'>
+			<form method="post" action="/v3/next" id='next' is="next-form">
 				<input type='hidden'/>
 				<input type='submit' value="Skip to the Next Track" id='next-submit'/>
 			</form>
