move refresh button logic into web component

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -59,7 +59,7 @@
 			</form>
 		</li>
 		<li>
-			<form method="get" action="/v3" id='refresh'>
+			<form method="get" action="/v3" id='refresh' is="refresh-form">
 				<input type='hidden'/>
 				<input type='submit' value="Refresh" id='refresh-submit'/>
 			</form>
