tidy up meta tags in v3

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,12 +2,11 @@
 <!DOCTYPE html> 
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 	<head> 
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<title>LucOs Media Player</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
 	<link href="/v3.css" rel="stylesheet">
 	<link rel="icon" type="image/jpg" href="/logo.jpg" />
+	<link rel="manifest" href="/manifest.json" />
 	<script type="text/javascript">
 		const clientVariables = {{{clientVariables}}};
 	</script>
