add search button to controls

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -63,6 +63,11 @@
 				<input type='submit' value="Refresh" id='refresh-submit'/>
 			</form>
 		</li>
+		<li>
+			<form method="get" action="https://media-metadata.l42.eu/search" id='search' target='_blank'>
+				<input type='submit' value="Search Library" id='search-submit'/>
+			</form>
+		</li>
 	</ul>
 	<h2>Playlist</h2>
 	<track-playlist>
